--- a/index.html
+++ b/index.html
@@ -12623,7 +12623,7 @@ td {
                         This is a low-cost option and is available on first-come-first-served basis. 
                         A participant will directly pay their accommodation cost to the hostel. 
                         Other options for accommodation are the guest house of the institute and the hotels close to the institute. 
-                        Please contact us to book a hostel room or if you need support for other accommodation options. 
+                        Please <a href='https://mmlabiitg.github.io/wsiitg.html/#contact' style="color: black; font-weight: bold;">contact us</a> to book a hostel room or if you need support for other accommodation options. 
                         Payment for the accommodation will be made directly on spot.
                     </p>
                 </div>
