--- a/index.html
+++ b/index.html
@@ -12623,7 +12623,7 @@ td {
                         This is a low-cost option and is available on first-come-first-served basis. 
                         A participant will directly pay their accommodation cost to the hostel. 
                         Other options for accommodation are the guest house of the institute and the hotels close to the institute. 
-                        Please <a href='https://mmlabiitg.github.io/wsiitg.html/#contact' style="color: black; font-weight: bold;">contact us</a> to book a hostel room or if you need support for other accommodation options. 
+                        Please <a href='https://mmlabiitg.github.io/wsiitg.html/#contact' style="color: black; font-weight: bold;">mail us</a> to book a hostel room or if you need support for other accommodation options. 
                         Payment for the accommodation will be made directly on spot.
                     </p>
                 </div>
@@ -12678,7 +12678,7 @@ td {
 
                     <div class="  row bg-gray-100 p-8">
                             <div class="col-md-6">
-                                <h2 class="text-2xl text-white mb-4">Coordinators</h2>
+                                <h2 class="text-2xl text-white mb-4">Coordinator</h2>
                                 <p class="text-white">
                                     Prof. Arijit Sur (+91-9678000387)<br>
                                 </p><br>
@@ -12700,7 +12700,7 @@ td {
                                     <textarea placeholder="Message" rows="4"
                                         class="block w-full rounded-md py-2 px-4 mb-2"></textarea>-->
                                     <button type="submit"
-                                        class="bg-blue-500 hover:bg-blue-700 text-white py-2 px-4 rounded-md">Mail us </button>
+                                        class="bg-blue-700 hover:bg-blue-700 text-white py-2 px-4 rounded-md">Mail us </button>
                                 </form>
                             </div>
                     </div>
