--- a/index.html
+++ b/index.html
@@ -12700,7 +12700,7 @@ td {
                                     <textarea placeholder="Message" rows="4"
                                         class="block w-full rounded-md py-2 px-4 mb-2"></textarea>-->
                                     <button type="submit"
-                                        class="bg-blue-700 hover:bg-blue-700 text-white py-2 px-4 rounded-md">Mail us </button>
+                                        class="bg-blue-700 py-2 px-4 rounded-md hover:bg-blue-700 text-white">Mail us </button>
                                 </form>
                             </div>
                     </div>
