--- a/index.html
+++ b/index.html
@@ -12460,7 +12460,7 @@ td {
                   </table>
                   <div class="news-feed-container">
                     <div class="news-text">
-                      <b><i>Lecture videos will be made available for the registered candidates after the school</i></b>
+                      <b><i>Class links will be shared with registered email IDs. Lecture recordings will be accessible after the program.</i></b>
                     </div>
                   </div>
                 </div>
