--- a/index.html
+++ b/index.html
@@ -11733,7 +11733,7 @@ td {
 
     /* Container for the news feed */
     .news-feed-container {
-      width: 800px;
+      width: 900px;
       overflow: hidden; /* Hide overflow content */
       position: relative;
       height: 75px; /* Adjust height as needed */
@@ -11771,8 +11771,8 @@ td {
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
         <div class="container">
-            <!-- <a class="navbar-brand" href="#page-top"><img src="assets/img/Minimalist Logo.jpg" alt="..."/></a>
-            <a class="navbar-brand" href="#"><img class="delhiMarkup" src="Cailogo_update_1.png"><img /></a>
+            <a class="navbar-brand" href="#page-top"><img src="assets/img/Minimalist Logo.jpg" alt="..."/></a>
+            <!-- <a class="navbar-brand" href="#"><img class="delhiMarkup" src="Cailogo_update_1.png"><img /></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 Menu
@@ -11780,8 +11780,6 @@ td {
             </button> -->
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-
-
                     <li class="nav-item"><a class="nav-link" href="#about">Aim & Scope</a></li>
                     <li class="nav-item"><a class="nav-link" href="#speakers">Speakers</a></li>
                     <li class="nav-item"><a class="nav-link" href="#register">Registration</a></li>
@@ -12475,7 +12473,7 @@ td {
                 <div style="display: none;" id="responsiveTable2">
                       <div class="news-feed-container">
                         <div class="news-text">
-                          <b><i>Lecture videos will be made available for the registered candidates after the school</i></b>
+                          <b><i>Class links will be shared with registered email IDs. Lecture recordings will be accessible after the program.</i></b>
                         </div>
                       </div>
                     
