--- a/index.html
+++ b/index.html
@@ -12457,7 +12457,7 @@ td {
                   </table>
                   <div class="news-feed-container">
                     <div class="news-text">
-                      <b><i>Class links will be shared with registered email IDs. All the lecture recordings will also be accessible after the program.</i></b>
+                      <b><i>Class links will be shared with registered email IDs. All the lecture recordings will be accessible also after the program.</i></b>
                     </div>
                   </div>
                 </div>
@@ -12472,7 +12472,7 @@ td {
                 <div style="display: none;" id="responsiveTable2">
                       <div class="news-feed-container">
                         <div class="news-text">
-                          <b><i>Class links will be shared with registered email IDs. All the lecture recordings will also be accessible after the program.</i></b>
+                          <b><i>Class links will be shared with registered email IDs. All the lecture recordings will be accessible also after the program.</i></b>
                         </div>
                       </div>
                     
