--- a/index.html
+++ b/index.html
@@ -12116,7 +12116,7 @@ td {
                     </div>
                  </div>
                  <div class="row people ">
-                    <div class="col-md-6">
+                    <div class="col-md-4">
                       <div class="team-member">
                         <img class="mx-auto rounded-circle" src="assets/img/team/Sdandapat_round.png" alt="..." />
                         <h4>Dr. Sandipan Dandapat</h4>
@@ -12130,7 +12130,7 @@ td {
                                 aria-label="Dr. Sandipan Dandapat google scholar Profile"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-4">
                       <div class="team-member">
                         <img class="mx-auto rounded-circle" src="assets/img/team/DPdogra_round.png" alt="..." />
                         <h4>Dr. Debi Prasad Dogra</h4>
@@ -12143,6 +12143,22 @@ td {
                             </div> -->
                             <a class="btn btn-dark btn-social mx-2" href="https://secs.iitbbs.ac.in/index.php/dpdogra/"
                                 aria-label="Dr. Debi Prasad Dogra Profile"><i class="fab fa-linkedin-in"></i></a>
+                        </div>
+                    </div>
+                     
+                    <div class="col-md-4">
+                      <div class="team-member">
+                        <img class="mx-auto rounded-circle" src="assets/img/team/image.png" alt="..." />
+                        <h4>Dr. Soujanya Poria</h4>
+                        <p class="text-muted"> Assistant Professor<br>
+                          Singapore University of Technology and Design<br>
+                          Singapore</p>
+                            <!-- <div class="bio">
+                                <p>Bio here...
+                                </p>
+                            </div> -->
+                            <a class="btn btn-dark btn-social mx-2" href="https://istd.sutd.edu.sg/people/faculty/soujanya-poria/"
+                                aria-label="Dr. Soujanya Poria Profile"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
                 </div>
