--- a/index.html
+++ b/index.html
@@ -12368,6 +12368,8 @@ td {
                                             <b>Branch Name:</b> IIT Guwahati <br>
                                             <b>IFSC Code:</b> CNRB0008652 <br>
                                             <b> Account Number:</b> 8652101030401 <br>
+                                            <b style="color: red; font-weight: bold;">  We are sending registration confirmations after verifying payments with the bank. Due to the high volume of applicants, there may be a delay in processing confirmations.
+We kindly request all applicants to remain patient as we work diligently to complete the process. Thank you for your understanding and cooperation.</b>
                               </p>
                         </div>
                     </div>
