--- a/index.html
+++ b/index.html
@@ -12369,8 +12369,8 @@ td {
                                             <b>Branch Name:</b> IIT Guwahati <br>
                                             <b>IFSC Code:</b> CNRB0008652 <br>
                                             <b> Account Number:</b> 8652101030401 <br>
-                                            <b style="color: red; font-weight: bold;">  We are sending registration confirmations after verifying payments with the bank. Due to the high volume of applicants, there may be a delay in processing confirmations.
-We kindly request all applicants to remain patient as we work diligently to complete the process. Thank you for your understanding and cooperation.</b>
+                                            <b style="color: red; font-weight: bold;"> We are currently verifying payments with the bank before sending out registration confirmations. This process may take some time, and there could be delays in issuing confirmations.
+We kindly ask all applicants for their patience as we work diligently to complete the verification process. Thank you for your understanding and cooperation.</b>
                               </p>
                         </div>
                     </div>
@@ -12715,8 +12715,7 @@ We kindly request all applicants to remain patient as we work diligently to comp
                                     <input type="email" placeholder="Email" class=" block w-full rounded-md py-2 px-4 mb-2" />
                                     <textarea placeholder="Message" rows="4"
                                         class="block w-full rounded-md py-2 px-4 mb-2"></textarea>-->
-                                    <button type="submit"
-                                        class="bg-blue-700 py-2 px-4 rounded-md hover:bg-blue-700 text-white">Mail us </button>
+                                    <button type="submit" class="bg-blue-700 py-2 px-4 rounded-md hover:bg-blue-700 text-white">Mail us @ suklav@iitg.ac.in</button>
                                 </form>
                             </div>
                     </div>
