--- a/index.html
+++ b/index.html
@@ -12476,7 +12476,7 @@ We kindly ask all applicants for their patience as we work diligently to complet
                   </table>
                   <div class="news-feed-container">
                     <div class="news-text">
-                      <b><i>Class links will be shared with registered email IDs. All the lecture recordings will be accessible also after the program.</i></b>
+                      <b><i>Class links will be shared with registered email IDs. All the lecture recordings will also be accessible after the program.</i></b>
                     </div>
                   </div>
                 </div>
@@ -12491,7 +12491,7 @@ We kindly ask all applicants for their patience as we work diligently to complet
                 <div style="display: none;" id="responsiveTable2">
                       <div class="news-feed-container">
                         <div class="news-text">
-                          <b><i>Class links will be shared with registered email IDs. All the lecture recordings will be accessible also after the program.</i></b>
+                          <b><i>Class links will be shared with registered email IDs. All the lecture recordings will also be accessible after the program.</i></b>
                         </div>
                       </div>
                     
@@ -12636,11 +12636,11 @@ We kindly ask all applicants for their patience as we work diligently to complet
                 <div class="text-center">
                     <p class="section-subheading Home text-muted" >
                         A limited number of rooms in the institute hostels are reserved for the participants.
-                        This is a low-cost option and is available on first-come-first-served basis. 
+                        This is a low-cost option and is available on a first-come-first-served basis. 
                         A participant will directly pay their accommodation cost to the hostel. 
                         Other options for accommodation are the guest house of the institute and the hotels close to the institute. 
                         Please <a href='https://mmlabiitg.github.io/wsiitg.html/#contact' style="color: black; font-weight: bold;">mail us</a> to book a hostel room or if you need support for other accommodation options. 
-                        Payment for the accommodation will be made directly on spot.
+                        Payment for the accommodation will be made directly on the spot.
                     </p>
                 </div>
                     <div style="height: 2rem;"></div>
@@ -12715,7 +12715,7 @@ We kindly ask all applicants for their patience as we work diligently to complet
                                     <input type="email" placeholder="Email" class=" block w-full rounded-md py-2 px-4 mb-2" />
                                     <textarea placeholder="Message" rows="4"
                                         class="block w-full rounded-md py-2 px-4 mb-2"></textarea>-->
-                                    <button type="submit" class="bg-blue-700 py-2 px-4 rounded-md hover:bg-blue-700 text-white">Mail us @ suklav@iitg.ac.in</button>
+                                    <button type="submit" class="bg-blue-700 py-2 px-4 rounded-md hover:bg-blue-700 text-white">Mail us at suklav@iitg.ac.in</button>
                                 </form>
                             </div>
                     </div>
