--- a/index.html
+++ b/index.html
@@ -12639,7 +12639,7 @@ We kindly ask all applicants for their patience as we work diligently to complet
                         This is a low-cost option and is available on a first-come-first-served basis. 
                         A participant will directly pay their accommodation cost to the hostel. 
                         Other options for accommodation are the guest house of the institute and the hotels close to the institute. 
-                        Please <a href='https://mmlabiitg.github.io/wsiitg.html/#contact' style="color: black; font-weight: bold;">mail us</a> to book a hostel room or if you need support for other accommodation options. 
+                        Please <a href='https://mmlabiitg.github.io/wsiitg.html/#contact' style="color: black; font-weight: bold;">mail us (at suklav@iitg.ac.in)</a> to book a hostel room or if you need support for other accommodation options. 
                         Payment for the accommodation will be made directly on the spot.
                     </p>
                 </div>
@@ -12762,7 +12762,7 @@ We kindly ask all applicants for their patience as we work diligently to complet
                                 <p class="item-intro text-muted">Prof. Ganesh Ramakrishnan
                                     (https://www.cse.iitb.ac.in/~ganesh/) is currently serving as an Institute Chair
                                     Professor at the Department of Computer Science and Engineering, IIT Bombay. His
-                                    areas of research include human assisted AI/ML, use of AI/ML in resource constrained
+                                    areas of research include human-assisted AI/ML, use of AI/ML in resource constrained
                                     environments, learning with symbolic encoding of domain knowledge in ML and NLP,
                                     etc. He has been focusing his energy on organizing relevant machine learning modules
                                     for resource constrained environments into https://decile.org/. He has demonstrated
