--- a/index.html
+++ b/index.html
@@ -11824,7 +11824,7 @@ td {
                         </b>
                         <hr>
                         <a class="btn btn-primary btn-xl text-uppercase register-button" style="border: none;"
-                            href="#register">Register<br> by 2<sup>nd</sup> January 2025</a>
+                            href="#register">Register<br> by 4<sup>th</sup> January 2025</a>
                         <div class="counterContainer ">
                             <div id="counter">
                                 <div>
