--- a/index.html
+++ b/index.html
@@ -9,11 +9,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Winter School on Deep Learning for Vision and Language Modelling</title>
+    <title>Winter School</title>
     <!-- Bootstrap icons-->
     <link href="../cdn.jsdelivr.net/npm/bootstrap-icons%401.5.0/font/bootstrap-icons.css" rel="stylesheet" />
-    <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="assets/banner.html" />
     <!-- Font Awesome icons (free version)-->
     <script src="../use.fontawesome.com/releases/v6.4.0/js/all.js" crossorigin="anonymous"></script>
     <!-- Google fonts-->
@@ -11761,6 +11759,8 @@ td {
     }
 
     </style>
+    <!-- Favicon-->
+    <link rel="icon" type="image/png" href="Cailogo_update_1.png" />
 </head>
 
 <body id="page-top">
