--- a/index.html
+++ b/index.html
@@ -11006,7 +11006,7 @@ header.masthead .masthead-heading {
   line-height: 3.25rem;
   margin-bottom: 2rem;
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  /* text-shadow: -5px -5px 0 rgba(190, 29, 247, 0.62), 0 5px 5px rgba(11, 50, 191, 0.75); 3D effect */
+  text-shadow: 4px 4px 1.5px black;
 }
 
 @media (min-width: 768px) {
