--- a/index.html
+++ b/index.html
@@ -11758,6 +11758,19 @@ td {
       }
     }
 
+        #register-counter {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            color: white;
+            font-size: 1.25rem;
+            font-weight: bold;
+            text-shadow: 1.5px 1.5px 1.5px black;
+            margin-top: 2rem;
+        }
+        .counterContainer{
+            margin-top: 2rem;
+        }
     </style>
     <!-- Favicon-->
     <link rel="icon" type="image/png" href="Cailogo_update_1.png" />
