--- a/index.html
+++ b/index.html
@@ -11618,26 +11618,6 @@ textarea {
 
 }
 
-#days {
-  background-color: transparent;
-}
-
-#hours {
-  background-color: transparent;
-}
-
-#minutes {
-  background-color: transparent;
-}
-
-#seconds {
-  background-color: transparent;
-}
-
-.counterContainer {
-  margin-top: 2rem;
-}
-
 .team-member {
   position: relative;
 }
@@ -11722,12 +11702,13 @@ td {
     font-family: 'Roboto Slab', serif;
 }
         
-.register-button {
-  /* Linear gradient from top (#ff0000) to bottom (#0000ff) */
-  background: linear-gradient(to bottom, #5D0089 0%, #00326D 100%);
-  /* For browsers that do not support gradients */
-  /* background: -webkit-linear-gradient(top,  #5D0089 0%, #00326D 100%); */
-}
+        .register-button {
+            background: linear-gradient(to bottom, #5D0089 0%, #00326D 100%);
+            text-transform: uppercase;
+            border: none;
+            color: white;
+            text-shadow: none;
+        }
 
     /* Container for the news feed */
     .news-feed-container {
