--- a/index.html
+++ b/index.html
@@ -12385,8 +12385,9 @@ td {
                         <div class="text-justify">
                               <p class="text-muted">
                                     <h4>Fee details</h4>
-                                              <b>Participants (online/offline):</b> 2,000 INR <br>
-                                              <b>Foreign/Industry Participants:</b> 10,000 INR <br>
+                                              <b>Students / Faculties :</b> 2,000 INR <br>
+                                              <b>Foreign Participants / Industry Personnel :</b> 10,000 INR <br>
+                                              <it>(same for online and offline)</it><br>
                                     <div style="height: 2rem;"></div>
                                     <h4>Bank Details</h4>
                                             <b>Beneficiary Name:</b> IITG TIDF <br>
