--- a/index.html
+++ b/index.html
@@ -12661,7 +12661,7 @@ We kindly ask all applicants for their patience as we work diligently to complet
                 <div style="height: 2rem;"></div>
                 <div class="text-center">
                     <p class="section-subheading Home text-muted" >
-                        A limited number of rooms in the institute hostels are reserved for the participants.
+                        A limited number of rooms in the institute hostels are reserved for the participants between 5<sup>th</sup> to 14<sup>th</sup> January.
                         This is a low-cost option and is available on a first-come-first-served basis. 
                         A participant will directly pay their accommodation cost to the hostel. 
                         Other options for accommodation are the guest house of the institute and the hotels close to the institute. 
