--- a/index.html
+++ b/index.html
@@ -11870,6 +11870,7 @@ td {
                         // Update the countdown every second
                         setInterval(countdown, 1000);
                     </script>
+                        <br> <b style="color: yellow; font-weight: bold;"> Participants are requested to bring their laptops for the hands-on sessions.</b>
                     </div>
                 </header>
             </div>
