--- a/index.html
+++ b/index.html
@@ -12670,25 +12670,22 @@ td {
                 <h2 class="section-heading text-uppercase">Accomodation</h2>
                 <div style="height: 2rem;"></div>
                 <div class="text-center">
-                    <p class="section-subheading Home text-muted" >
-                        A limited number of rooms in the institute hostels are reserved for the participants between 5<sup>th</sup> to 14<sup>th</sup> January.
-                        This is a low-cost option and is available on a first-come-first-served basis. 
-                        A participant will directly pay their accommodation cost to the hostel. 
-                        Other options for accommodation are the guest house of the institute and the hotels close to the institute. 
-                        Please <a href='https://mmlabiitg.github.io/wsiitg.html/#contact' style="color: black; font-weight: bold;">mail us (at suklav@iitg.ac.in)</a> to book a hostel room or if you need support for other accommodation options. 
-                        Payment for the accommodation will be made directly on the spot.
-                    </p>
+
+                                <p class="text-muted">
+                                    Double-occupancy rooms with common washrooms are reserved for the participants at ₹200/day in the institute hostels between 5<sup>th</sup> to 14<sup>th</sup> January. For calculating the number of days, <b>each calendar date is counted</b>. For example, a check-in on 5th January at 11 PM and check-out on 14th January at 1 AM will be counted as 10 days.<br>
+                                    Please make the payment via the details given below and fill up the <a href='https://forms.gle/QWURxY2HC5rnQeBD6' style="color: black; font-weight: bold;">form</a><br>
+                                  <div style="height: 2rem;"></div>
+                                  <h4>Bank Details</h4>
+                                          <b>Beneficiary Name:</b> HAB General <br>
+                                          <b>Bank Name:</b> ICICI Bank <br>
+                                          <b>Branch Name:</b> IIT Guwahati <br>
+                                          <b>IFSC Code:</b> ICIC0003325 <br>
+                                          <b> Account Number:</b> 332501001160 <br>
+                                  <div style="height: 2rem;"></div>
+                                    Mattresses, blankets, and other essentials are available for rent at ₹75/day, which must be <b>paid at the hostel</b> upon arrival. Please bring a lock and key for your room.
+                                  </p>
+
                 </div>
-                    <div style="height: 2rem;"></div>
-                    <div class="text-center-asli-wala">
-                        <div class="text-justify">
-                              <p class="text-muted">
-                                    <h4>Room Charges</h4>
-                                              <b>INR 200 (approx.) per day per person</b> with common washroom <br>
-                                              <b>INR 300 (approx.) per day per person</b> with attached washroom <br>
-                              </p>
-                        </div>
-                    </div>
                 <div style="height: 4rem;"></div>
                 </div>
             </div>
