--- a/index.html
+++ b/index.html
@@ -12671,9 +12671,9 @@ td {
                 <div style="height: 2rem;"></div>
                 <div class="text-center">
 
-                                <p class="text-muted">
+                                <p>
                                     Double-occupancy rooms with common washrooms are reserved for the participants at ₹200/day in the institute hostels between 5<sup>th</sup> to 14<sup>th</sup> January. For calculating the number of days, <b>each calendar date is counted</b>. For example, a check-in on 5th January at 11 PM and check-out on 14th January at 1 AM will be counted as 10 days.<br>
-                                    Please make the payment via the details given below and fill up the <a href='https://forms.gle/QWURxY2HC5rnQeBD6' style="color: black; font-weight: bold;">form</a><br>
+                                    Please make the payment via the details given below and fill up the <a href='https://forms.gle/QWURxY2HC5rnQeBD6' style="color: black; font-weight: bold;">form</a><br>.
                                   <div style="height: 2rem;"></div>
                                   <h4>Bank Details</h4>
                                           <b>Beneficiary Name:</b> HAB General <br>
@@ -12682,7 +12682,9 @@ td {
                                           <b>IFSC Code:</b> ICIC0003325 <br>
                                           <b> Account Number:</b> 332501001160 <br>
                                   <div style="height: 2rem;"></div>
-                                    Mattresses, blankets, and other essentials are available for rent at ₹75/day, which must be <b>paid at the hostel</b> upon arrival. Please bring a lock and key for your room.
+                                    Mattresses, blankets, and other essentials are available for rent at ₹75/day, which must be <b>paid at the hostel</b> upon arrival. Please bring a lock and key for your room. <br>
+                                  <div style="height: 2rem;"></div>
+                                     Breakfast, lunch, and dinners are available at the mess of any hostel, including the one you will be staying in. Rates are ₹60 for breakfast, ₹75 for lunch, ₹75 for dinner, and ₹100 for special Dinner (available on Wednesdays and Sundays). Alternatively, you may opt for food from the canteens available in each hostel.
                                   </p>
 
                 </div>
