--- a/index.html
+++ b/index.html
@@ -12647,7 +12647,7 @@ td {
                               <b>11:30 AM - 12:30 PM</b><br>Fairness in AI<br><br>
                               <b>12:30 - 1:30 PM</b><br> DL Applications<br><br>
                               <b>1:30 - 3:00 PM</b><br> Lunch<br><br>
-                              <b>3:00 - 5:00 PM</b><br> <p style="color: orange; font-weight: bold;">Valedictory</p><br><br>
+                              <b>3:00 - 5:00 PM</b><br> <span style="color: orange; font-weight: bold;">Valedictory</span><br><br>
                       </p> 
 
                 </div>
