--- a/index.html
+++ b/index.html
@@ -12504,9 +12504,9 @@ td {
                     <tr>
                       <td><b>13th January<br>(Monday)</b></td>
                       <td><it>Expert<br>Lecture</it></td>
-                      <td>Explainable AI</td>
+                      <td>DL for Biomedical Imaging</td>
                       <td>Fairness in AI</td>
-                      <td>DL Applications</td>
+                      <td>Explainable AI</td>
                       <td style="color: orange; font-weight: bold;">Valedictory</td>
                     </tr>
                   </table>
@@ -12535,8 +12535,8 @@ td {
                             <h4>6th January (Monday), 2025</h4>
                         </div>
                       <p  class="section-subheading Home text-muted" >
-                              <b>9:00 - 10:00 AM</b><br><it>Expert Lecture</it><br><br>
-                              <b>10:00 - 11:00 AM</b><br> Inauguration<br><br>
+                              <b>9:00 - 10:00 AM</b><br><span style="color: lightgreen; font-weight: bold;">Inauguration</span><br><br>
+                              <b>10:00 - 11:00 AM</b><br><it>Expert Lecture</it><br><br>
                               <b>11:00 - 11:30 AM</b><br> High Tea<br><br>
                               <b>11:30 AM - 12:30 PM</b><br> ML Basics - I<br><br>
                               <b>12:30 - 1:30 PM</b><br> ML Basics - II<br><br>
@@ -12642,10 +12642,10 @@ td {
                         </div>
                       <p  class="section-subheading Home text-muted" >
                               <b>9:00 - 10:00 AM</b><br><it>Expert Lecture</it><br><br>
-                              <b>10:00 - 11:00 AM</b><br>Explainable AI<br><br>
+                              <b>10:00 - 11:00 AM</b><br>DL for Biomedical Imaging<br><br>
                               <b>11:00 - 11:30 AM</b><br> High Tea<br><br>
                               <b>11:30 AM - 12:30 PM</b><br>Fairness in AI<br><br>
-                              <b>12:30 - 1:30 PM</b><br> DL Applications<br><br>
+                              <b>12:30 - 1:30 PM</b><br>Explainable AI<br><br>
                               <b>1:30 - 3:00 PM</b><br> Lunch<br><br>
                               <b>3:00 - 5:00 PM</b><br> <span style="color: orange; font-weight: bold;">Valedictory</span><br><br>
                       </p> 
