--- a/index.html
+++ b/index.html
@@ -12504,7 +12504,7 @@ td {
                     <tr>
                       <td><b>13th January<br>(Monday)</b></td>
                       <td><it>Expert<br>Lecture</it></td>
-                      <td>DL for Biomedical Imaging</td>
+                      <td>DL for<br>Biomedical Imaging</td>
                       <td>Fairness in AI</td>
                       <td>Explainable AI</td>
                       <td style="color: orange; font-weight: bold;">Valedictory</td>
