--- a/index.html
+++ b/index.html
@@ -12449,16 +12449,16 @@ td {
                       <td><b>6th January<br>(Monday)</b></td>
                       <td style="color: lightgreen; font-weight: bold;">Inauguration</td>
                       <td><it>Expert<br>Lecture</it></td>
-                      <td>ML Basics</td>
-                      <td>ML Basics</td>
+                      <td>ML Basics - I</td>
+                      <td>ML Basics - II</td>
                       <td>Hands-on</td>
                     </tr>
                     <tr style="border-bottom: 1px solid black;">
                       <td><b>7th January<br>(Tuesday)</b></td>
-                      <td><it>Expert<br>Lecture</it></td>
                       <td>DL Basics</td>
                       <td>CNN - I</td>
                       <td>CNN - II</td>
+                      <td><it>Expert<br>Lecture</it></td>
                       <td>Hands-on</td>
                     </tr>
                     <tr style="border-bottom: 1px solid black;">
@@ -12548,11 +12548,11 @@ td {
                             <h4>7th January (Tuesday), 2025</h4>
                         </div>
                       <p  class="section-subheading Home text-muted" >
-                              <b>9:00 - 10:00 AM</b><br><it>Expert Lecture</it><br><br>
-                              <b>10:00 - 11:00 AM</b><br> DL Basics<br><br>
+                              <b>9:00 - 10:00 AM</b><br> DL Basics<br><br>
+                              <b>10:00 - 11:00 AM</b><br> CNN - I<br><br>
                               <b>11:00 - 11:30 AM</b><br> High Tea<br><br>
-                              <b>11:30 AM - 12:30 PM</b><br> CNN - I<br><br>
-                              <b>12:30 - 1:30 PM</b><br> CNN - II<br><br>
+                              <b>11:30 AM - 12:30 PM</b><br> CNN - II<br><br>
+                              <b>12:30 - 1:30 PM</b><br> <it>Expert Lecture</it><br><br>
                               <b>1:30 - 3:00 PM</b><br> Lunch<br><br>
                               <b>3:00 - 5:00 PM</b><br> Hands-on<br><br>
                       </p>                       
