--- a/index.html
+++ b/index.html
@@ -12463,8 +12463,8 @@ td {
                     </tr>
                     <tr style="border-bottom: 1px solid black;">
                       <td><b>8th January<br>(Wednesday)</b></td>
-                      <td><i>Expert<br>Lecture</i></td>
                       <td>Sequential<br>Modelling - I</td>
+                      <td><i>Expert<br>Lecture</i></td>
                       <td>Sequential<br>Modelling - II</td>
                       <td>Sequential<br>Modelling - III</td>
                       <td>Hands-on</td>
@@ -12496,8 +12496,8 @@ td {
                     <tr style="border-bottom: 1px solid black;">
                       <td><b>12th January<br>(Sunday)</b></td>
                       <td><i>Expert<br>Lecture</i></td>
-                      <td>DL for<br>Network</td>
-                      <td>DL for<br>Vehicular Network</td>
+                      <td>DL for<br> Video Analysis - I</td>
+                      <td>DL for<br> Video Analysis - II</td>
                       <td>DL for<br>Cyber Security</td>
                       <td>Hands-on</td>
                     </tr>
@@ -12561,8 +12561,8 @@ td {
                             <h4>8th January (Wednesday), 2025</h4>
                         </div>
                       <p  class="section-subheading Home text-muted" >
-                              <b>9:00 - 10:00 AM</b><br><i>Expert Lecture</i><br><br>
-                              <b>10:00 - 11:00 AM</b><br> Sequential Modelling - I<br><br>
+                              <b>9:00 - 10:00 AM</b><br> Sequential Modelling - I<br><br>
+                              <b>10:00 - 11:00 AM</b><br> <i>Expert Lecture</i><br><br>
                               <b>11:00 - 11:30 AM</b><br> High Tea<br><br>
                               <b>11:30 AM - 12:30 PM</b><br> Sequential Modelling - II<br><br>
                               <b>12:30 - 1:30 PM</b><br> Sequential Modelling - III<br><br>
@@ -12627,9 +12627,9 @@ td {
                         
                       <p  class="section-subheading Home text-muted" >
                               <b>9:00 - 10:00 AM</b><br><i>Expert Lecture</i><br><br>
-                              <b>10:00 - 11:00 AM</b><br> DL for Network<br><br>
+                              <b>10:00 - 11:00 AM</b><br> DL for Video Analysis - I<br><br>
                               <b>11:00 - 11:30 AM</b><br> High Tea<br><br>
-                              <b>11:30 AM - 12:30 PM</b><br>DL for Vehicular Network<br><br>
+                              <b>11:30 AM - 12:30 PM</b><br>DL for Video Analysis - II<br><br>
                               <b>12:30 - 1:30 PM</b><br> DL for Cyber Security<br><br>
                               <b>1:30 - 3:00 PM</b><br> Lunch<br><br>
                               <b>3:00 - 5:00 PM</b><br> Hands-on<br><br>
