--- a/index.html
+++ b/index.html
@@ -12475,7 +12475,7 @@ td {
                       <td>DL for Vision - I</td>
                       <td>DL for Vision - II</td>
                       <td>DL for Vision - III</td>
-                      <td>Hands-on</td>
+                      <td>DL for Vision - IV <br> & Hands-on</td>
                     </tr>
                     <tr style="border-bottom: 1px solid black;">
                       <td><b>10th January<br>(Friday)</b></td>
@@ -12584,7 +12584,7 @@ td {
                               <b>11:30 AM - 12:30 PM</b><br> DL for Vision - II<br><br>
                               <b>12:30 - 1:30 PM</b><br> DL for Vision - III<br><br>
                               <b>1:30 - 3:00 PM</b><br> Lunch<br><br>
-                              <b>3:00 - 5:00 PM</b><br> Hands-on<br><br>
+                              <b>3:00 - 5:00 PM</b><br> DL for Vision - IV & Hands-on<br><br>
                       </p>  
                         
                         <!-- 10th January (Friday) -->
